--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -17,7 +17,10 @@
   overflow:hidden;
   box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.6);
   background-color: #e5ffff;
-  
+
+}
+.user-profile p{
+  width:90%;
 }
 
 .field {
