--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,8 +6,8 @@
      <div class="post-content-title">
        <p><%= link_to post.user.name,"/users/#{post.user.id}",method: :get ,class: "user-btn" %></p>
         <h2><%= post.title %></h2>
-       <p><%= post.text.truncate(30) + "　" +"(" + post.text.length.to_s + "文字" + ")" %><p>
-       <p class="date"><%= post.created_at.strftime("%Y-%m-%d %H:%M:%S") %></p>
+       <p><%= post.text.truncate(50)%><%="　" +"(" + post.text.length.to_s + "文字" + ")" %><p>
+       <p class="date"><%= post.created_at.strftime("%Y-%m-%d %H:%M:%S") %>  [コメント： <%= post.comments.count %>件]</p>
     </div>
     <div class="post-detail">
      <ul class="post-options">
