--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -2,9 +2,9 @@
   <div class="new-post-form">
     <%= form_for @post do |f| %>
       <p>タイトル</p>
-      <%= f.text_field :title %>
+      <%= f.text_field :title ,placeholder: 'タイトルを入力（必須）'%>
       <p>投稿詳細</p>
-      <%= f.text_area :text %>
+      <%= f.text_area :text ,placeholder: '本文を入力（必須）'%>
       <%= f.submit %>
       
     <%end%>
