--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,11 +1,11 @@
 <div class="user-container">
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h2>ユーザー情報編集</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
    <div class="field">
-    <%= f.label "ユーザーネーム" %><br />
+    <%= f.label "ユーザー名" %><br />
     <%= f.text_field :name, autofocus: true,autocomplete: "name",class: "textbox name" %>
   </div>
 
@@ -19,37 +19,37 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :password %><br />
+    <%= f.label "変更するパスワード" %><br />
     <%= f.password_field :password, autocomplete: "new-password",class: "textbox password"%>
     <% if @minimum_password_length %>
       <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
+      <em>（６文字以上）</em>
     <% end %>
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
+    <%= f.label "もう一度入力してください" %><br />
     <%= f.password_field :password_confirmation, autocomplete: "new-password" ,class: "textbox password"%>
   </div>
 
   <div class="field">
-    <%= f.label :current_password %> <br/>
+    <%= f.label "現在のパスワード（必ず入力）" %><br/>
     <%= f.password_field :current_password, autocomplete: "current-password" ,class: "textbox password"%>
   </div>
 
    <div class="field">
-    <%= f.label :profile %><br />
+    <%= f.label "プロフィール" %><br />
     <%= f.text_area :profile, autofocus: true, autocomplete: "profile" ,class: "textarea password"%>
   </div>
 
   <div class="actions">
-    <%= f.submit "Update" %>
+    <%= f.submit "更新する" %>
   </div>
 <% end %>
 
-<h3>Cancel my account</h3>
+<h3>アカウント削除</h3>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+<p>本当によろしいですか？ <%= button_to "アカウント削除", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
-<%= link_to "/back", :back %>
+<%= link_to "戻る", :back %>
 </div>
