--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,11 +1,11 @@
 <div class="user-content">
- <h2>Sign up</h2>
+ <h2>新規登録</h2>
 
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= render "devise/shared/error_messages", resource: resource %>
 
     <div class="field">
-     <%= f.label :name %><br />
+     <%= f.label "ユーザーネーム" %><br />
      <%= f.text_field :name ,placeholder: '名前を入力（必須）'  %>
    </div>
 
@@ -18,7 +18,7 @@
    <div class="field">
      <%= f.label :password %>
      <% if @minimum_password_length %>
-     <em>(<%= @minimum_password_length %> characters minimum)</em>
+     <em>（6文字以上）</em>
       <% end %><br />
      <%= f.password_field :password, autocomplete: "new-password" %>
    </div>
